--- a/.github/workflows/azure-container-deploy..yml
+++ b/.github/workflows/azure-container-deploy..yml
@@ -24,19 +24,7 @@ jobs:
       - name: Log in to Azure CLI
         uses: azure/login@v1
         with:
-          creds: {
-            "clientId": "aed5d797-4aa7-482c-9f9c-90b5513e744b",
-            "clientSecret": "uvG8Q~-KTpU7e.T9HGQLkM8GnGOb3kdfxOBqUaNr",
-            "subscriptionId": "ac2fb659-4fb0-4144-aa09-4a3248464539",
-            "tenantId": "8bf5796a-e68e-403e-93a9-fa0cfaa65dfa",
-            "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
-            "resourceManagerEndpointUrl": "https://management.azure.com/",
-            "activeDirectoryGraphResourceId": "https://graph.windows.net/",
-            "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
-            "galleryEndpointUrl": "https://gallery.azure.com/",
-            "managementEndpointUrl": "https://management.core.windows.net/"
-            }
-
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Step 4: Set up Docker Buildx
       - name: Set up Docker Buildx
@@ -48,7 +36,7 @@ jobs:
         with:
           registry: aigentychatbot.azurecr.io
           username: aigentychatbot
-          password: wf3z4075boJeKV6AMHK+5lIqxIXWSJCCBJ4ZqGZVxP+ACRAIdhJ+
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
       # Step 6: Create .env file with secrets
       - name: Create .env file
@@ -85,4 +73,4 @@ jobs:
       # Step 10: Deploy a new Azure Container Instance
       - name: Deploy new container
         run: |
-          az container create --resource-group aigenty-chatbot --name aigenty-chatbot-container --image aigentychatbot.azurecr.io/aigenty-chatbot:latest --ports 8000 --dns-name-label aigenty-chatbot-server --environment-variables ENVIRONMENT=production --registry-login-server aigentychatbot.azurecr.io --registry-username aigentychatbot --registry-password wf3z4075boJeKV6AMHK+5lIqxIXWSJCCBJ4ZqGZVxP+ACRAIdhJ+
+          az container create --resource-group aigenty-chatbot --name aigenty-chatbot-container --image aigentychatbot.azurecr.io/aigenty-chatbot:latest --ports 8000 --dns-name-label aigenty-chatbot-server --environment-variables ENVIRONMENT=production --registry-login-server aigentychatbot.azurecr.io --registry-username aigentychatbot --registry-password ${{ secrets.REGISTRY_PASSWORD }}
