--- a/.github/workflows/azure-deploy..yml
+++ b/.github/workflows/azure-deploy..yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m venv antenv
+          source antenv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -33,7 +35,7 @@ jobs:
           app-name: "aigenty-chatbot" # Set to your app name
           slot-name: "production" # Optional: if using deployment slots
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: "."
+          package: "." # Set this to your application's path if different
 
       - name: Logout from Azure
         run: az logout
