--- a/.github/workflows/azure-deploy..yml
+++ b/.github/workflows/azure-deploy..yml
@@ -1,3 +1,44 @@
+# name: Deploy to Azure App Service
+
+# on:
+#   push:
+#     branches:
+#       - main # Set this to your default branch
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v2
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: "3.12" # Set to the Python version you are using
+
+#       - name: Install dependencies
+#         run: |
+#           python -m venv antenv
+#           source antenv/bin/activate
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+
+#       - name: "Login via Azure CLI"
+#         uses: azure/login@v1
+#         with:
+#           creds: ${{ secrets.AZURE_CREDENTIALS_NEW }}
+
+#       - name: "Deploy to Azure Web App"
+#         uses: azure/webapps-deploy@v2
+#         with:
+#           app-name: "aigenty-chatbot" # Set to your app name
+#           slot-name: "production" # Optional: if using deployment slots
+#           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#           package: "." # Set this to your application's path if different
+
+#       - name: Logout from Azure
+#         run: az logout
 name: Deploy to Azure App Service
 
 on:
@@ -36,6 +77,10 @@ jobs:
           slot-name: "production" # Optional: if using deployment slots
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: "." # Set this to your application's path if different
+
+      - name: Set startup command
+        run: |
+          az webapp config set --name aigenty-chatbot --resource-group aigenty-portal --startup-file 'source antenv/bin/activate && uvicorn app.main:app --host 0.0.0.0 --port 8000'
 
       - name: Logout from Azure
         run: az logout
