--- a/.github/workflows/azure-deploy..yml
+++ b/.github/workflows/azure-deploy..yml
@@ -1,44 +1,3 @@
-# name: Deploy to Azure App Service
-
-# on:
-#   push:
-#     branches:
-#       - main # Set this to your default branch
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - uses: actions/checkout@v2
-
-#       - name: Set up Python
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: "3.12" # Set to the Python version you are using
-
-#       - name: Install dependencies
-#         run: |
-#           python -m venv antenv
-#           source antenv/bin/activate
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
-
-#       - name: "Login via Azure CLI"
-#         uses: azure/login@v1
-#         with:
-#           creds: ${{ secrets.AZURE_CREDENTIALS_NEW }}
-
-#       - name: "Deploy to Azure Web App"
-#         uses: azure/webapps-deploy@v2
-#         with:
-#           app-name: "aigenty-chatbot" # Set to your app name
-#           slot-name: "production" # Optional: if using deployment slots
-#           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-#           package: "." # Set this to your application's path if different
-
-#       - name: Logout from Azure
-#         run: az logout
 name: Deploy to Azure App Service
 
 on:
@@ -53,17 +12,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.12" # Set to the Python version you are using
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Install dependencies
+      - name: Login to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: aigentychatbot.azurecr.io
+          username: "aigentychatbot" # Replace with the retrieved username
+          password: "wf3z4075boJeKV6AMHK+5lIqxIXWSJCCBJ4ZqGZVxP+ACRAIdhJ+" # Replace with the retrieved primary password
+
+      - name: Build and push Docker image
         run: |
-          python -m venv antenv
-          source antenv/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          docker build -t aigentychatbot.azurecr.io/aigenty-chatbot:latest .
+          docker push aigentychatbot.azurecr.io/aigenty-chatbot:latest
 
       - name: "Login via Azure CLI"
         uses: azure/login@v1
@@ -71,11 +33,9 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS_NEW }}
 
       - name: "Deploy to Azure Web App"
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: "aigenty-chatbot" # Set to your app name
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: "." # Set this to your application's path if different
+        run: |
+          az webapp config container set --name aigenty-chatbot --resource-group aigenty-portal --docker-custom-image-name aigentychatbot.azurecr.io/aigenty-chatbot:latest
+          az webapp config set --resource-group aigenty-portal --name aigenty-chatbot --startup-file ". antenv/bin/activate && uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
       - name: Logout from Azure
         run: az logout
